# sejong-c-final

./: CMakeLists.txt  main.c
7장과제/: 7_a-2.c  7_a-3.c  7_a-4.c  7_a-5.c  7_a_1.c
8장과제/: 8a-1.c  8a-2.c  8a-3.c  8a-4.c  8a-5.c
8장함수/: 8-1.c  8-10.c  8-11.c  8-12.c  8-13.c  8-14.c  8-2.c  8-3.c  8-4.c  8-5.c  8-6.c  8-7.c  8-8.c  8-9.c  function.c
array/: 7-1.c  7-10.c  7-11.c  7-12.c  7-13.c  7-14.c  7-15.c  7-16.c  7-2.c  7-3.c  7-4.c  7-5.c  7-6.c  7-7.c  7-8.c  7-9.c
array2/: 7_2-1.c  7_2-10.c  7_2-2.c  7_2-3.c  7_2-4.c  7_2-5.c  7_2-6.c  7_2-7(v).c  7_2-7.c  7_2-8.c  7_2-9.c
