cmake_minimum_required(VERSION 3.23)
project(final C)

set(CMAKE_C_STANDARD 99)

add_executable(final main.c array/7-1.c array/7-2.c array/7-3.c array/7-4.c array/7-5.c array/7-6.c array/7-7.c array/7-8.c array/7-9.c array/7-10.c array/7-11.c array/7-12.c array/7-13.c array/7-14.c array/7-15.c array/7-16.c)
