cmake_minimum_required(VERSION 3.23)
project(final C)

set(CMAKE_C_STANDARD 99)

add_executable(final main.c array/7-1.c array/7-2.c array/7-3.c array/7-4.c array/7-5.c array/7-6.c array/7-7.c array/7-8.c array/7-9.c array/7-10.c array/7-11.c array/7-12.c array/7-13.c array/7-14.c array/7-15.c array/7-16.c array2/7_2-1.c array2/7_2-2.c array2/7_2-3.c array2/7_2-4.c array2/7_2-5.c array2/7_2-6.c "array2/7_2-7(v).c" array2/7_2-8.c array2/7_2-9.c array2/7_2-10.c 7장과제/7_a-1.c 7장과제/7_a-2.c 7장과제/7_a-3.c 7장과제/7_a-4.c 7장과제/7_a-5.c 8장함수/8-1.c 8장함수/8-2.c 8장함수/8-3.c 8장함수/function.c 8장함수/8-4.c 8장함수/8-5.c 8장함수/8-6.c 8장함수/8-7.c 8장함수/8-8.c 8장함수/8-9.c 8장함수/8-10.c 8장함수/8-11.c 8장함수/8-12.c 8장함수/8-13.c 8장함수/8-14.c)
